add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </span>
             </div>
           </div>
-          <div class="searched">
+          <div class="data searched">
             <h3>Szukane:</h3>
             <div class="searched__row">
               <span class="searched__label">w</span>
